src/styles/styles.less
// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//   Spacing

@spacing-x: clamp(1.5rem, 5vw, 5rem);
@spacing-section: clamp(6.25rem, 13.75vw, 13.75rem);
@spacing-block: clamp(3.75rem, 6.875vw, 6.875rem);
@spacing-top: clamp(3.125rem, 8.875vw, 8.875rem);
@spacing-lg: clamp(3.125rem, 5.4688vw, 5.4688rem);
@spacing-md: clamp(3.125rem, 4.375vw, 4.375rem);
@spacing-sm: clamp(2rem, 2.1875vw, 2.1875rem);
@spacing-xsm: clamp(1rem, 1.5vw, 1.5rem);
@gutter: clamp(1rem, 1.25vw, 1.25rem);

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//   Typography - Sizes

@text-hero-size: clamp(6rem, 11.3125vw, 11.3125rem);
@text-section-size: clamp(4.75rem, 8vw, 8rem);
@text-block-size: clamp(1.375rem, 4.625vw, 4.625rem);
@text-subheadingLg-size: clamp(28.8208px, 3.75vw, 60px);
@text-subheadingSm-size: clamp(28.8208px, 2.75vw, 44px);
@text-body-size: clamp(1rem, 1.1875vw, 1.1875rem);
@text-breadcrumb-size: clamp(1rem, 1.25vw, 1.25rem);
@text-small-size: clamp(14px, 1vw, 1rem);
@text-eyebrow-size: clamp(14px, 1vw, 1rem);

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//   Typography - Line Heights

@text-hero-height: 0.82em;
@text-section-height: 0.9em;
@text-block-height: 1.1em;
@text-subheadingLg-height: clamp(31.6992px, 4vw, 64px);
@text-subheadingSm-height: clamp(31.6992px, 3.25vw, 52px);
@text-body-height: clamp(1.5rem, 2vw, 2rem);
@text-breadcrumb-height: 1.1em;
@text-small-height: 1.62em;
@text-eyebrow-height: 1.36em;

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//  Typography - Max Widths

@text-mw: 43.75rem;
@heading-mw: 54rem;

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//  Buttons

@button-padding-y: clamp(0.625rem, 0.75vw, 0.75rem);
@button-padding-x: clamp(1.25rem, 1.75vw, 1.75rem);
@button-padding: @button-padding-y @button-padding-x;

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//  Animation

@default-duration: 0.3s;
@default-easing: cubic-bezier(0.22, 1, 0.36, 1);

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//  Colors - Base

@color-0: #191c1f;
@color-1: #ffffff;
@color-2: #2D6BFF;
@color-gray: #87898A;

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//  Colors - Variations

@color-004: lighten(@color-0, 80%);
@color-003: lighten(@color-0, 50%);
@color-002: lighten(@color-0, 15%);
@color-001: lighten(@color-0, 5%);
@color-04: desaturate(@color-004, 50%);
@color-03: desaturate(@color-003, 50%);
@color-02: desaturate(@color-002, 50%);
@color-01: desaturate(@color-001, 0%);

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//  Font Family

@font-body: 'Inter', sans-serif;

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//  Layout

@header-height: 6.25rem;
@header-height-sm: 5rem;
@offset: 60px;

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//  Breakpoints

@mq-nav: 62.5em;
@mq-xxl: 100em;
@mq-xl: 80em;
@mq-l: 62.5em;
@mq-m: 43.75em;
@mq-s: 31.25em;

// : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :
//  Breakpoint Offsets

@mq-nav-1: 62.5em - 0.0625;
@mq-xxl-1: 100em - 0.0625;
@mq-xl-1: 80em - 0.0625;
@mq-l-1: 62.5em - 0.0625;
@mq-m-1: 43.75em - 0.0625;
@mq-s-1: 31.25em - 0.0625;


//::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
//::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
// Reset
//::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
//::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::

button {
    all: unset;
    outline: revert;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: inherit;
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
sub,
sup,
tt,
var,
u,
i,
center,
dl,
dt,
dd,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

html {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    scroll-behavior: smooth;
    background: @color-0;
}

body {
    background: @color-0;
    line-height: 1;
    scroll-behavior: smooth;
    text-rendering: optimizeSpeed;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: "";
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

button {
    appearance: none;
    background: transparent;
    -webkit-appearance: none;
    border: 0;
    padding: 0;
    -webkit-tap-highlight-color: transparent;
    cursor: pointer;
    font-size: inherit;
}

a {
    text-decoration: unset;
    color: unset;
    cursor: pointer;
}

.list-reset {
    padding: 0;
    margin: 0;
    list-style: none;
}

ul {
    padding: 0;
    margin: 0;
    list-style: none;
}

img {
    display: block;
    max-width: 100%;
}




//::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
//::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
// Base
//::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
//::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::

@keyframes translateY {
    0% {
        transform: translateY(0px);
    }

    40% {
        transform: translateY(-21px);
    }

    90% {
        transform: translateY(0px);
    }
}
/* ... */

